<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charge</string>
    <string name="settings">Settings</string>
    <string name="networks">Networks</string>
    <string name="charging_stations">Charging Stations</string>
    <string name="about">About</string>
    <string name="chargepoint">Chargepoint</string>
    <string name="blink">Blink</string>
    <string name="unavailable">Unavailable stations</string>
    <string name="favorites">Only favorites</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="directions">Directions</string>
    <string name="favorite">Add to Favorites</string>
    <string name="level_1">Level 1 (120 V AC)</string>
    <string name="level_2">Level 2 (240 V AC)</string>
    <string name="level_3">Level 3 (DC Fast)</string>
    <string name="none">none</string>
    <string name="all">all</string>
    <string name="some">some</string>
    <string name="no">no</string>
    <string name="availability">selected charging levels available</string>

</resources>
